cmake_minimum_required(VERSION 3.0.0)
project(unix)
find_package(OpenSSL REQUIRED)
# add_executable(client client.cpp security.cpp desAndrsa.cpp)
# add_executable(server server.cpp security.cpp desAndrsa.cpp)
add_executable(test test.cpp)
# target_link_libraries(client PRIVATE ${OPENSSL_LIBRARIES})
# target_link_libraries(server PRIVATE ${OPENSSL_LIBRARIES})
# target_link_libraries(test PRIVATE ${OPENSSL_LIBRARIES})
# add_subdirectory(socket)